refactor(backend): full structure refactoring for API
